alignig items and mobile fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,4 +34,7 @@
       min-height: 3rem;
       background-color: #939366;
     }
+    #contact ul li {
+      font-size: 1rem;
+    }
   }
